--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -159,7 +159,6 @@ aria-hidden="true">
   <script src="/Producto2/scripts/create-week.js"></script>
   <script src="/Producto2/scripts/delete-week.js"></script>
   <script src="/Producto2/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="/Producto2/server.js"></script>
-</body>
+  <script src="/Producto2/server.js"></script></body>
 
 </html>
