--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/Producto2/bootstrap/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="/Producto2/styles/Dashboard.css">
+  <link rel="stylesheet" type="text/css" href="/Producto2/styles/Dashboard.css">
   <title>GP-TWO</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
