--- a/Producto2/Weektasks.html
+++ b/Producto2/Weektasks.html
@@ -210,8 +210,8 @@ aria-hidden="true">
   <script src="/Producto2/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="/Producto2/scripts/create-task.js"></script>
   <script src="/Producto2/scripts/delete-task.js"></script>
+  <script src="/Producto2/server.js"></script>
   
- 
 </body>
 
 </html>
