--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -160,6 +160,7 @@ aria-hidden="true">
   <script src="/Producto2/scripts/delete-week.js"></script>
   <script src="/Producto2/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="/Producto2/server.js"></script>
+  <script src="/Producto2/config"></script>
 </body>
 
 </html>
