--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Producto2/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/Producto2/styles/Dashboard.css">
+  <link rel="stylesheet" type="text/css" href="/styles/Dashboard.css">
   <title>GP-TWO</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -155,11 +155,11 @@ aria-hidden="true">
 </div>
 
 
-  <script src="/Producto2/scripts/select-color.js"></script>
-  <script src="/Producto2/scripts/create-week.js"></script>
-  <script src="/Producto2/scripts/delete-week.js"></script>
-  <script src="/Producto2/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="/Producto2/server.js"></script>
+  <script src="/scripts/select-color.js"></script>
+  <script src="/scripts/create-week.js"></script>
+  <script src="/scripts/delete-week.js"></script>
+  <script src="/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="/server.js"></script>
 </body>
 
 </html>
