--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -31,7 +31,7 @@
             <h5 class="card-title"><b>Semana 1</b></h5>
           </div>
           <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Producto2/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
+            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
             <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
               data-bs-target="#eliminarTarjetaModal"></i></a>
           </div>
@@ -43,7 +43,7 @@
             <h5 class="card-title"><b>Semana 2</b></h5>
           </div>
           <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Producto2/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
+            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
             <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
               data-bs-target="#eliminarTarjetaModal"></i></a>
           </div>
@@ -55,7 +55,7 @@
             <h5 class="card-title"><b>Semana 3</b></h5>
           </div>
           <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Producto2/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
+            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
             <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
               data-bs-target="#eliminarTarjetaModal"></i></a>
           </div>
