--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -21,44 +21,7 @@
     </div>
   </header>
   <main class="container my-5 flex-grow-1">
-    <div class="row">
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-square" data-id="1">
-          <div class="card-body">
-            <h5 class="card-title"><b>Semana 1</b></h5>
-          </div>
-          <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
-            <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
-              data-bs-target="#eliminarTarjetaModal"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-square" data-id="2">
-          <div class="card-body">
-            <h5 class="card-title"><b>Semana 2</b></h5>
-          </div>
-          <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
-            <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
-              data-bs-target="#eliminarTarjetaModal"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-square" data-id="3">
-          <div class="card-body">
-            <h5 class="card-title"><b>Semana 3</b></h5>
-          </div>
-          <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
-            <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
-              data-bs-target="#eliminarTarjetaModal"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!--Aqui es donde irian las tarjetas de semana-->
   </main>
   <footer class="text-light py-3">
     <div class="container text-center">
