--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -118,10 +118,11 @@ aria-hidden="true">
 </div>
 
 
-  <script src="/Producto2/scripts/select-color.js"></script>
-  <script src="/Producto2/scripts/create-week.js"></script>
-  <script src="/Producto2/scripts/delete-week.js"></script>
-  <script src="/Producto2/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="/scripts/select-color.js"></script>
+  <script src="/scripts/create-week.js"></script>
+  <script src="/scripts/delete-week.js"></script>
+  <script src="/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="/server.js"></script>
 </body>
 
 </html>
