--- a/Producto2/Dashboard.html
+++ b/Producto2/Dashboard.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/styles/Dashboard.css">
+  <link rel="stylesheet" href="./styles/Dashboard.css">
   <title>GP-TWO</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -18,46 +18,12 @@
         <i class="bi bi-plus botonmas"></i>
       </button>
       <h1 class="text-center text-white m-0">Gestor Semanal</h1>
+      
     </div>
   </header>
   <main class="container my-5 flex-grow-1">
     <div class="row">
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-square" data-id="1">
-          <div class="card-body">
-            <h5 class="card-title"><b>Semana 1</b></h5>
-          </div>
-          <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
-            <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
-              data-bs-target="#eliminarTarjetaModal"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-square" data-id="2">
-          <div class="card-body">
-            <h5 class="card-title"><b>Semana 2</b></h5>
-          </div>
-          <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
-            <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
-              data-bs-target="#eliminarTarjetaModal"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-square" data-id="3">
-          <div class="card-body">
-            <h5 class="card-title"><b>Semana 3</b></h5>
-          </div>
-          <div class="card-icons d-flex justify-content-between position-absolute bottom-0 start-0 end-0">
-            <a href="/Weektasks.html" class="card-link"><i class="bi bi-eye"></i></a>
-            <a href="#" class="card-link"><i class="bi bi-trash" data-bs-toggle="modal"
-              data-bs-target="#eliminarTarjetaModal"></i></a>
-          </div>
-        </div>
-      </div>
+      
     </div>
   </main>
   <footer class="text-light py-3">
@@ -116,6 +82,8 @@
       </div>
     </div>
   </div>
+
+
   <!-- Modal genérica -->
   <div class="modal fade" id="genericModal" tabindex="-1" aria-labelledby="genericModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -155,11 +123,10 @@ aria-hidden="true">
 </div>
 
 
-  <script src="/scripts/select-color.js"></script>
-  <script src="/scripts/create-week.js"></script>
-  <script src="/scripts/delete-week.js"></script>
-  <script src="/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="/server.js"></script>
+  <script src="./scripts/select-color.js"></script>
+  <script src="./scripts/create-week.js"></script>
+  <script src="./scripts/delete-week.js"></script>
+  <script src="./bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
