--- a/Producto2/public/Dashboard.html
+++ b/Producto2/public/Dashboard.html
@@ -123,8 +123,9 @@ aria-hidden="true">
 </div>
 
 
-  <script src="./scripts/select-color.js"></script>
-  <script src="./scripts/create-week.js"></script>
+ 
+  <script src="./scripts/graphql-queries.js" type="module"></script>
+  <script src="./scripts/create-week.js" type="module"></script>
   <script src="./scripts/delete-week.js"></script>
   <script src="./bootstrap/bootstrap.bundle.min.js"></script>
 </body>
