--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -207,11 +207,11 @@ aria-hidden="true">
   
 </div>
 
-  <script src="/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="/scripts/create-task.js"></script>
-  <script src="/scripts/delete-task.js"></script>
+  <script src="./bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="./scripts/create-task.js"></script>
+  <script src="./scripts/delete-task.js"></script>
   <script src="./scripts/graphql-queries.js"></script>
-  <script src="/server.js"></script>
+  <script src="../server.js"></script>
   
 </body>
 
