--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -211,7 +211,7 @@ aria-hidden="true">
   <script src="./scripts/create-task.js"></script>
   <script src="./scripts/delete-task.js"></script>
   <script src="./scripts/graphql-queries.js"></script>
-  <script src="../server.js"></script>
+  <!-- <script src="./server.js"></script> -->
   
 </body>
 
