--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -198,7 +198,7 @@ aria-hidden="true">
     <div class="modal-footer">
       <a href="#" class="card-link"><button type="button" class="btn btn-secondary" data-bs-toggle="modal"
         data-bs-target="#formtask">Cancelar</button></a>
-        <a href="#" class="card-link"><button type="button" class="btn color-rojo2" id="deleteButton" data-bs-toggle="modal" data-bs-target="#eliminarTareaModal">Eliminar</button></a>
+        <a href="#" class="card-link"><button type="button" class="btn color-rojo2" id="btnEliminarTareaDefinitivamente" data-bs-toggle="modal" data-bs-target="#eliminarTareaModal">Eliminar</button></a>
     </div>
   </div>
   
