--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -156,6 +156,8 @@
           </div>
           <div class="mb-3">
             <input type="text" class="form-control" id="ubicacion" placeholder="Ubicación">
+            <div class="mb-3 form-check">
+              <input class="form-check-input" type="checkbox" id="tareaTerminadaCheckbox">
           </div>
           <div class="modal-footer">
             <button type="submit" id="saveButton" class="btn btn-success"><i class="bi bi-check"></i></button>
