--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -203,8 +203,9 @@ aria-hidden="true">
   
 </div>
 
-  <script src="./bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="./scripts/create-task.js" type="module" ></script>
+<script src="./scripts/graphql-queries.js" type="module"></script>
+<script src="./bootstrap/bootstrap.bundle.min.js"></script>
+<script src="./scripts/create-task.js" type="module" ></script>
 <script src="./scripts/delete-task.js" type="module"></script>
 
   
