--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -29,7 +29,7 @@
           <div class="d-flex ">
             <div class="contenedor-dia" data-day="lunes">
               <div class="card-header">Lunes</div>
-             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)"data-day="lunes">
+             <div class="card-body dropzone" id="lunes" ondragover="allowDrop(event)" ondrop="drop(event)"data-day="lunes">
 
             
               </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="contenedor-dia" data-day="martes">
               <div class="card-header">Martes</div>
-             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)">
+             <div class="card-body dropzone" id="martes" ondragover="allowDrop(event)" ondrop="drop(event)">
 
               </div>
               <div class="card-footer d-flex justify-content-center">
@@ -53,7 +53,7 @@
             </div>
             <div class="contenedor-dia" data-day="miercoles">
               <div class="card-header">Miércoles</div>
-             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event) "data-day="miercoles" >
+             <div class="card-body dropzone" id="miercoles" ondragover="allowDrop(event)" ondrop="drop(event) "data-day="miercoles" >
 
               </div>
               <div class="card-footer d-flex justify-content-center">
@@ -64,7 +64,7 @@
             </div>
             <div class="contenedor-dia" data-day="jueves" >
               <div class="card-header">Jueves</div>
-             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="jueves">
+             <div class="card-body dropzone" id="jueves" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="jueves">
 
 
               </div>
@@ -77,7 +77,7 @@
             <div class="contenedor-dia" data-day="viernes">
               <div class="card-header">Viernes
               </div>
-             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="viernes">
+             <div class="card-body dropzone" id="viernes" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="viernes">
 
                 
               </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="contenedor-dia" data-day="sabado">
               <div class="card-header">Sábado</div>
-             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="sabado">
+             <div class="card-body dropzone" id="sabado" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="sabado">
 
               </div>
               <div class="card-footer d-flex justify-content-center">
@@ -101,7 +101,7 @@
 
             <div class="contenedor-dia" data-day="domingo">
               <div class="card-header">Domingo</div>
-              <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="domingo"></div>
+              <div class="card-body dropzone" id="domingo" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="domingo"></div>
               <div class="card-footer d-flex justify-content-center">
                 <button class="btn color-rojo2" data-bs-toggle="modal" data-bs-target="#formtask" >
                   <i class="bi bi-plus"></i>
