--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -19,6 +19,9 @@
         </a>
       </button>
       <h1 class="text-center text-white m-0">Gestor Semanal</h1>
+      <button class="btn btn-light">
+        <i class="bi bi-x"></i>
+      </button>
     </div>
   </header>
 
