--- a/Producto2/public/Dashboard.html
+++ b/Producto2/public/Dashboard.html
@@ -124,9 +124,9 @@ aria-hidden="true">
 
 
  
-<script src="./scripts/graphql-queries.js" type="module"></script>
+
   <script src="./scripts/create-week.js" type="module"></script>
-  <script src="./scripts/delete-week.js"></script>
+  <script src="./scripts/delete-week.js" type="module"></script>
   <script src="./bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
