--- a/Producto2/public/Dashboard.html
+++ b/Producto2/public/Dashboard.html
@@ -22,7 +22,7 @@
     </div>
   </header>
   <main class="container my-5 flex-grow-1">
-    <div class="row">
+    <div class="row" id="weeks-container">
       
     </div>
   </main>
@@ -126,7 +126,7 @@ aria-hidden="true">
  
   <script src="./scripts/graphql-queries.js" type="module"></script>
   <script src="./scripts/create-week.js" type="module"></script>
-  <script src="./scripts/delete-week.js"></script>
+  <script src="./scripts/delete-week.js" type="module"></script>
   <script src="./bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
