--- a/Producto2/public/Weektasks.html
+++ b/Producto2/public/Weektasks.html
@@ -19,9 +19,6 @@
         </a>
       </button>
       <h1 class="text-center text-white m-0">Gestor Semanal</h1>
-      <button class="btn btn-light">
-        <i class="bi bi-x"></i>
-      </button>
     </div>
   </header>
 
@@ -32,7 +29,7 @@
           <div class="d-flex ">
             <div class="contenedor-dia" data-day="lunes">
               <div class="card-header">Lunes</div>
-             <div class="card-body dropzone" id="lunes" ondragover="allowDrop(event)" ondrop="drop(event)"data-day="lunes">
+             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)"data-day="lunes">
 
             
               </div>
@@ -44,7 +41,7 @@
             </div>
             <div class="contenedor-dia" data-day="martes">
               <div class="card-header">Martes</div>
-             <div class="card-body dropzone" id="martes" ondragover="allowDrop(event)" ondrop="drop(event)">
+             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)">
 
               </div>
               <div class="card-footer d-flex justify-content-center">
@@ -56,7 +53,7 @@
             </div>
             <div class="contenedor-dia" data-day="miercoles">
               <div class="card-header">Miércoles</div>
-             <div class="card-body dropzone" id="miercoles" ondragover="allowDrop(event)" ondrop="drop(event) "data-day="miercoles" >
+             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event) "data-day="miercoles" >
 
               </div>
               <div class="card-footer d-flex justify-content-center">
@@ -67,7 +64,7 @@
             </div>
             <div class="contenedor-dia" data-day="jueves" >
               <div class="card-header">Jueves</div>
-             <div class="card-body dropzone" id="jueves" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="jueves">
+             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="jueves">
 
 
               </div>
@@ -80,7 +77,7 @@
             <div class="contenedor-dia" data-day="viernes">
               <div class="card-header">Viernes
               </div>
-             <div class="card-body dropzone" id="viernes" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="viernes">
+             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="viernes">
 
                 
               </div>
@@ -92,7 +89,7 @@
             </div>
             <div class="contenedor-dia" data-day="sabado">
               <div class="card-header">Sábado</div>
-             <div class="card-body dropzone" id="sabado" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="sabado">
+             <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="sabado">
 
               </div>
               <div class="card-footer d-flex justify-content-center">
@@ -104,7 +101,7 @@
 
             <div class="contenedor-dia" data-day="domingo">
               <div class="card-header">Domingo</div>
-              <div class="card-body dropzone" id="domingo" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="domingo"></div>
+              <div class="card-body dropzone" ondragover="allowDrop(event)" ondrop="drop(event)" data-day="domingo"></div>
               <div class="card-footer d-flex justify-content-center">
                 <button class="btn color-rojo2" data-bs-toggle="modal" data-bs-target="#formtask" >
                   <i class="bi bi-plus"></i>
@@ -141,7 +138,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body">
-        <form id="form-tarea">
+        <form>
           <div class="mb-3">
             <input type="text" class="form-control " id="nombreTarea" placeholder="Nombre de tarea" >
           </div>
@@ -159,6 +156,7 @@
           </div>
           <div class="mb-3">
             <input type="text" class="form-control" id="ubicacion" placeholder="Ubicación">
+          </div>
           <div class="modal-footer">
             <button type="submit" id="saveButton" class="btn btn-success"><i class="bi bi-check"></i></button>
           </div>
@@ -200,17 +198,17 @@ aria-hidden="true">
     <div class="modal-footer">
       <a href="#" class="card-link"><button type="button" class="btn btn-secondary" data-bs-toggle="modal"
         data-bs-target="#formtask">Cancelar</button></a>
-        <a href="#" class="card-link"><button type="button" class="btn color-rojo2" id="btnEliminarTareaDefinitivamente" data-bs-toggle="modal" data-bs-target="#eliminarTareaModal">Eliminar</button></a>
+        <a href="#" class="card-link"><button type="button" class="btn color-rojo2" id="deleteButton" data-bs-toggle="modal" data-bs-target="#eliminarTareaModal">Eliminar</button></a>
     </div>
   </div>
   
 </div>
 
-
-<script src="./bootstrap/bootstrap.bundle.min.js"></script>
-<script src="./scripts/create-task.js" type="module" ></script>
-<script src="./scripts/delete-task.js" type="module"></script>
-
+  <script src="./bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="./scripts/create-task.js"></script>
+  <script src="./scripts/delete-task.js"></script>
   
+ 
 </body>
+
 </html>
